@@ -53,9 +53,7 @@ typedef enum event_type {
   EVENT_TYPE_TRDOS_INDEX,
   EVENT_TYPE_TIMER,
   EVENT_TYPE_TAPE_RECORD,
-  EVENT_TYPE_PLUSD_CMD_DONE,
   EVENT_TYPE_PLUSD_INDEX,
-
   EVENT_TYPE_WD_FDC,
   EVENT_TYPE_WD_FDC_MOTOR_OFF,
 
