@@ -2156,3 +2156,4 @@
 	 header files.
 20071019 disk/{fdd.[ch],wd_fdc.[ch]}: remove unnecessary 'direction' member
 	 of fdd_t (Stuart).
+20071019 disk/{plusd.[ch]},event.[ch]: remove unused event (Stuart).
